fixed text wrap on dialog

--- a/src/output.css
+++ b/src/output.css
@@ -778,6 +778,10 @@ h6 {
   margin-top: 50px;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .line-clamp-2 {
   overflow: hidden;
   display: -webkit-box;
@@ -1243,8 +1247,26 @@ h6 {
     margin-bottom: 1rem;
   }
 
+  .max-md\:block {
+    display: block;
+  }
+
+  .max-md\:h-fit {
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
+  .max-md\:h-full {
+    height: 100%;
+  }
+
   .max-md\:w-full {
     width: 100%;
+  }
+
+  .max-md\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
   }
 
   .max-md\:max-w-\[90\%\] {
@@ -1273,11 +1295,19 @@ h6 {
   .max-xs\:mt-2 {
     margin-top: 0.5rem;
   }
+
+  .max-xs\:justify-end {
+    justify-content: flex-end;
+  }
 }
 
 @media not all and (min-width: 361px) {
   .max-s-phone\:mt-2 {
     margin-top: 0.5rem;
+  }
+
+  .max-s-phone\:mr-0 {
+    margin-right: 0px;
   }
 
   .max-s-phone\:block {
@@ -1290,6 +1320,14 @@ h6 {
 
   .max-s-phone\:w-full {
     width: 100%;
+  }
+
+  .max-s-phone\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .max-s-phone\:w-2\/3 {
+    width: 66.666667%;
   }
 }
 
